Add checkin_times to user
